socket and console